<resources>
    <string name="app_name">Github Client</string>
    <string name="loading_projects">Loading projects …</string>
    <string name="project_name">タイトル</string>
    <string name="github_projects">リポジトリ一覧</string>
    <string name="github_project_detail">リポジトリ詳細</string>
    <string name="project_list">Project List</string>
    <string name="languages">プログラミング言語: %s</string>
    <string name="watchers">Watchers: %s</string>
    <string name="openIssues">Open Issues: %s</string>
    <string name="created_at">作成時間: %s</string>
    <string name="updated_at">最新時間: %s</string>
    <string name="clone_url">CloneするURL: %s</string>
    <string name="project_language">Project Language</string>
    <string name="project_watchers">Project Watchers</string>
    <string name="project_description">Project Description</string>
    <string name="open_issues">開かれているIssues</string>
    <string name="loading_project">Loading Project …</string>
    <string name="github_user_name">google</string>
    <string name="repo_list">リポジトリ一覧</string>
    <string name="name">名前: %s</string>
    <string name="blog">状態: %s</string>
    <string name="email">メール: %s</string>
</resources>
