<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="isLoading" type="boolean" />
        <variable name="userViewModel" type="jp.co.bitFlyer.githubClient.viewModel.UserViewModel"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/loading_project"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/loading_project"
            android:textAlignment="center"
            app:visibleGone="@{isLoading}"/>
        <LinearLayout
            android:layout_marginStart="@dimen/item_horizontal_margin"
            android:layout_marginEnd="@dimen/item_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            android:padding="5dp"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:orientation="vertical"
            app:visibleGone="@{!isLoading}">
            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profile_image"
                android:layout_width="@dimen/logo_width"
                android:layout_height="@dimen/logo_height"
                android:src="@drawable/github"
                app:civ_border_width="2dp"
                app:civ_border_color="#D3C11E"/>
            <TextView
                android:id="@+id/name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/project_name"
                android:textStyle="bold"
                android:textSize="@dimen/project_header1"
                android:text="@{String.format(@string/name, userViewModel.user.name)}"
                android:textAlignment="center"
                android:paddingBottom="5dp"/>
            <TextView
                android:id="@+id/blog_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{String.format(@string/blog, userViewModel.user.blog)}"
                android:contentDescription="@string/project_description"
                android:textSize="@dimen/project_header2" />
            <TextView
                android:id="@+id/mail_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{String.format(@string/email, userViewModel.user.email)}"
                android:contentDescription="@string/project_description"
                android:textSize="@dimen/project_header2" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/repoListButton"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_44"
                android:layout_marginStart="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_35"
                android:layout_marginEnd="20dp"
                android:background="@drawable/selector_login_bg"
                android:enabled="false"
                android:text="@string/repo_list"
                android:textAllCaps="false"
                android:textColor="@drawable/selector_login_text_color"
                android:textSize="16sp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
